# simpler_svg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: simpler_svg.hpp
tests/: simpler_svg_test.cpp
